--- a/src/app/views/views-home/views-home.component.html
+++ b/src/app/views/views-home/views-home.component.html
@@ -1,2 +1,4 @@
 <app-divider>Statistics</app-divider>
 <app-statistics [stats]="stats"></app-statistics>
+<app-divider>Items</app-divider>
+<app-item-list [items]="items"></app-item-list>
